--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   user_profile_avatar: ^0.1.2
   google_sign_in: ^6.0.2
   provider: ^6.0.5
+  babstrap_settings_screen: ^0.1.4
 
 
 dev_dependencies:
